# mqhandler

./: .env.example  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: docker.yml  main.yml  tests.yml
src/mqhandler/adapters/: message.py  output.py  settings.py  web.py
src/mqhandler/domain/: dto.py
src/mqhandler/infractructure/: bootstrap.py
src/mqhandler/infractructure/mq/: handlers.py  run.py
src/mqhandler/infrastructure/: bootstrap.py
src/mqhandler/infrastructure/mq/: handlers.py  health_check.py  run.py
src/mqhandler/services/: context.py  message.py
tests/: conftest.py  fake.py
tests/adapters/: adapters_message_test.py  adapters_output_test.py  adapters_settings_test.py  adapters_web_test.py
tests/domain/: domain_dto_test.py
tests/services/: context_test.py  message_test.py
