[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="mqhandler"
version="0.1.1"
dependencies = [
    "aio-pika",
    "aiohttp",
    "adaptix",
    "aiofiles",
]

[project.optional-dependencies]
tests = [
    'pytest',
    'pytest-asyncio',
    'pytest-env',
    'pytest-cov'
]

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79
target-version = ['py310']

[tool.pytest_env]
TEST_ENV = "TEST_VALUE"
FILE_PATH = "test_message.json"
EXTERNAL_API_URL="https://httpbin.org/post"
